--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,11 +63,9 @@
     <string name="today">Today</string>
     <string name="average_in_banks">Average in banks</string>
     <string name="for_one">for</string>
-    <string name="one">1$</string>
+    <string name="one_dollar">1$</string>
+    <string name="one_euro">1€</string>
     <string name="in_avg">average</string>
-
-    <string name="char_dollar">$</string>
-    <string name="char_euro">€</string>
 
     <string-array name="common_banks_lables">
         <item>Government</item>
@@ -85,5 +83,7 @@
         <item>avg</item>
     </string-array>
 
+    <string name="euro">EUR</string>
+    <string name="dollar">USD</string>
 
 </resources>
