delete on long click item listener

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="banks">Banks</string>
     <string name="average_today">Average today</string>
-    <string name="by_dates">By dates</string>
+    <string name="by_dates">Graph</string>
     <string name="dollar_symbol">$</string>
     <string name="average_currency">Average currency</string>
     <string name="bank">Bank</string>
