fix bug with spinner in graph fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,5 +91,6 @@
 
     <string name="euro">EUR</string>
     <string name="dollar">USD</string>
+    <string name="average">Average</string>
 
 </resources>
